--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
 
 .playerDashboard {
     flex: 2;
+    opacity: 0.5;
+}
+
+.playerDashboard.is-on-turn {
+    opacity: 1;
+    border: 3px seagreen solid;
 }
 
 .playerStats,
