[ci skip] play card animation PoC

--- a/src/CardComponent.module.scss
+++ b/src/CardComponent.module.scss
@@ -10,6 +10,12 @@
     padding: 10px;
     margin: 5px;
     text-align: center;
+
+    position: relative;
+    top: 0px;
+    left: 0px;
+    transition-property: left, top;
+    transition-duration: 0.7s;
 }
 
 .card-building {
