--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,5 @@
 * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell,
+        Ubuntu, roboto, noto, arial, sans-serif;
 }
