--- a/src/game/Player/PlayerDashboardStats.module.scss
+++ b/src/game/Player/PlayerDashboardStats.module.scss
@@ -64,3 +64,7 @@
     background-color: $dashboardMagesBackgroundColor;
     border: 3px outset lighten($dashboardMagesBackgroundColor, 12);
 }
+.resource-castle {
+    background-color: $dashboardCastleBackgroundColor;
+    border: 3px outset lighten($dashboardCastleBackgroundColor, 12);
+}
