[ci skip] Game layout

--- a/src/global.scss
+++ b/src/global.scss
@@ -3,3 +3,7 @@
     font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell,
         Ubuntu, roboto, noto, arial, sans-serif;
 }
+
+body {
+    margin: 0;
+}
