--- a/src/game/Game.module.scss
+++ b/src/game/Game.module.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
 
 .decks-wrapper {
@@ -40,4 +41,5 @@
 }
 
 .cards-wrapper {
+    margin-top: 20px;
 }
