[ci skip] discard card

--- a/src/game/CardInHand.module.scss
+++ b/src/game/CardInHand.module.scss
@@ -4,6 +4,7 @@
     cursor: pointer;
 
     // for card animation
+    z-index: 2; // because of the discard deck
     position: relative;
     top: 0px;
     left: 0px;
