--- a/src/game/Game.module.scss
+++ b/src/game/Game.module.scss
@@ -1,11 +1,22 @@
 .whole-game-wrapper {
     display: flex;
     flex-direction: column;
-    background: url('../assets/images/background.jpg') no-repeat;
-    background-size: cover;
-    padding: 20px;
     width: 100%;
     max-width: 1150px;
+    position: relative;
+}
+
+.background {
+    background: url('../assets/images/background.jpg') no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+}
+
+.game-wrapper-inner {
+    padding: 20px;
 }
 
 .dashboard-wrapper {
