--- a/src/game/Card/DiscardDeck.module.scss
+++ b/src/game/Card/DiscardDeck.module.scss
@@ -1,9 +1,10 @@
 .deck {
     width: 8em;
     height: 12em;
-    margin: 5px;
     border: 6px solid silver;
     border-radius: 15px;
+    margin: 5px;
+    margin-left: 4px;
 }
 
 .deck-with-card {
